--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #eeeeee;
+  height:100%;
+}
+
+html {
+  height:100%;
+}
+
+div#root {
+  height:100%;
 }
 
 code {
