--- a/src/CommandCenter.css
+++ b/src/CommandCenter.css
@@ -11,6 +11,13 @@
     padding:0.7em 1em;
 }
 
+.CommandCenterContainer {
+    display: flex;
+    align-self: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+}
+
 .CommandCenter-card {
     align-self: flex-start;
     border-radius: 1em;
